# cubiquity-for-u3d-native

./: .gitattributes  .gitignore  CHANGELOG.txt  LICENSE.txt  README.rst
Assets/Cubiquity/Documentation/: 0_ReadMe.txt
Assets/Cubiquity/Editor/: Autorun.cs  ColoredCubesVolumeDataInspector.cs  ColoredCubesVolumeInspector.cs  ColoredCubesVolumeRendererInspector.cs  MainMenuEntries.cs  PathUtils.cs  TerrainVolumeDataInspector.cs  TerrainVolumeInspector.cs  TerrainVolumeRendererInspector.cs  VolumeDataInspector.cs
Assets/Cubiquity/Examples/: CubicTerrainExampleScene.unity  TerrainExampleScene.unity
Assets/Cubiquity/Examples/Common/Resources/Shader/: FakeColoredCubes.shader
Assets/Cubiquity/Examples/Common/Scripts/: ClickToDestroy.cs
Assets/Cubiquity/Examples/CreateVoxelDatabase/: CreateVoxelDatabase.cs
Assets/Cubiquity/Examples/CreatingVolumes/CreateVoxelDatabase/: CreateVoxelDatabase.cs
Assets/Cubiquity/Examples/CreatingVolumes/ImportFromVoxelForge/: ImportWrapper.cs  Main.unity  VoxelForgeToCubiquity.cs
Assets/Cubiquity/Examples/CreatingVolumes/ProceduralGeneration/: ProceduralTerrainVolume.cs
Assets/Cubiquity/Examples/CreatingVolumes/SimpleTerrainVolume/: Main.unity  SimpleTerrainVolume.cs
Assets/Cubiquity/Examples/DataForImporting/: Readme.txt
Assets/Cubiquity/Examples/FullScenes/ImportedFromHeightmap/: ImportedFromHeightmapScene.unity
Assets/Cubiquity/Examples/ImportedVolumes/FromHeightmap/: ImportedFromHeightmapScene.unity
Assets/Cubiquity/Examples/Resources/Materials/: DerivativeFakeColoredCubes.mat  FakeColoredCubes.mat  SimpleFakeColoredCubes.mat
Assets/Cubiquity/Examples/Resources/Shader/: DerivativeFakeColoredCubes.shader  FakeColoredCubes.shader  SimpleFakeColoredCubes.shader
Assets/Cubiquity/Examples/Scripts/: ClickToDestroy.cs
Assets/Cubiquity/Examples/SolarSystem/: Main.unity
Assets/Cubiquity/Examples/SolarSystem/Materials/: Earth.mat  Moon.mat
Assets/Cubiquity/Examples/Tests/MengerSponge/: Main.unity
Assets/Cubiquity/Resources/Shaders/: ColoredCubes.shader  ColoredCubesUtilities.cginc  Colormap.shader  Triplanar.shader  VisualizeLOD.shader
Assets/Cubiquity/Scripts/: ColoredCubesVolume.cs  ColoredCubesVolumeCollider.cs  ColoredCubesVolumeData.cs  MeshConversion.cs  Picking.cs  QuantizedColor.cs  TerrainVolume.cs  TerrainVolumeCollider.cs  TerrainVolumeData.cs  TerrainVolumeRenderer.cs  Volume.cs  VolumeCollider.cs  VolumeData.cs  VolumeRenderer.cs  WritePermissions.cs
Assets/Cubiquity/Scripts/Impl/: CuOctreeNode.cs  CubiquityDLL.cs  Installation.cs  MeshConversion.cs  OctreeNode.cs  Utility.cs
Assets/StreamingAssets/Cubiquity/SDK/: ConvertToImageSlices  ConvertToVDB  ProcessVDB  libCubiquityC.dylib
Assets/StreamingAssets/Cubiquity/SDK/OSX/: ProcessVDB
Assets/StreamingAssets/Cubiquity/VoxelDatabases/Examples/: ImportedCityLicense.txt
DocSrc/: Doxyfile  Installation.cs  Principles.cs  QuickStart.cs  UserInterface.cs
DocSrc/PrinciplesSubPages/: CubiquityVsCubiquityForUnity.cs  ObtainingVolumeData.cs  VoxelEngineConcepts.cs
ProjectSettings/: ProjectSettings.asset
cubiquity/: .gitattributes  CMakeLists.txt  INSTALL.txt  README.rst  c_flag_overrides.cmake  cxx_flag_overrides.cmake
cubiquity-for-unity3d/Assets/Cubiquity/Examples/: EmptySceneWithLighting.unity  RuntimePainting.cs
cubiquity-for-unity3d/Assets/Cubiquity/Scripts/: ColoredCubesVolume.cs  CubiquityRenderer.cs  TerrainVolume.cs  Volume.cs  VolumeData.cs
cubiquity-for-unity3d/Assets/Cubiquity/Scripts/Impl/: CubiquityDLL.cs  OctreeNode.cs
cubiquity-for-unity3d/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
cubiquity-native-plugin/: CubiquityPlugin.cpp  CubiquityPlugin.def  CubiquityPlugin.h  D3D11CubiquityRenderer.cpp  D3D11CubiquityRenderer.h  D3D11OctreeNode.cpp  D3D11OctreeNode.h  D3D11VolumeRenderer.cpp  D3D11VolumeRenderer.h  RefCounted.h  RenderThreadCommand.cpp  RenderThreadCommand.h  Utils.h
cubiquity-native-plugin/Shaders/: ColoredCubesPixelShader.hlsl  ColoredCubesVertexShader.hlsl  TerrainPixelShader.hlsl  TerrainVertexShader.hlsl
cubiquity-native-plugin/Unity/: IUnityGraphics.h
cubiquity-native-plugin/VisualStudio2013/: CubiquityPlugin.sln  CubiquityPlugin.vcxproj  CubiquityPlugin.vcxproj.filters  RenderingPlugin.vcxproj  RenderingPlugin.vcxproj.filters  sqlite.vcxproj  sqlite.vcxproj.filters
cubiquity/Data/MagicaVoxel/: Readme.txt
cubiquity/Data/VXL/: Readme.txt
cubiquity/Examples/: LICENSE-EXCEPTION.txt
cubiquity/Examples/CubiquityCTest/: CMakeLists.txt  CubiquityCTest.cpp
cubiquity/Examples/OpenGL/: CMakeLists.txt  ColoredCubesFragmentShader.glsl  ColoredCubesVertexShader.glsl  TerrainFragmentShader.glsl  TerrainVertexShader.glsl  controls.cpp  main.cpp
cubiquity/Tools/ProcessVDB/: CMakeLists.txt  Exceptions.h  Export.cpp  Export.h  ExportImageSlices.cpp  ExportImageSlices.h  HeaderOnlyLibs.cpp  HeaderOnlyLibs.h  Import.cpp  Import.h  ImportHeightmap.cpp  ImportHeightmap.h  ImportImageSlices.cpp  ImportImageSlices.h  ImportMagicaVoxel.cpp  ImportMagicaVoxel.h  ImportVXL.cpp  ImportVXL.h  main.cpp  main.h
cubiquity/Tools/ProcessVDB/Dependencies/: LICENSE-EXCEPTION.txt  MagicaVoxelModel.h  stb_image.h
